--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -12,6 +12,7 @@ FROM debian:{{ env.variant | ltrimstr("slim-") }}-slim
 {{ ) else ( -}}
 FROM buildpack-deps:{{ env.variant }}
 {{ ) end -}}
+LABEL maintainer="Chris Hulton <chulton@ltvco.com>, Patrick Tulskie <patrick@ltvco.com>"
 
 {{ if is_alpine then ( -}}
 RUN set -eux; \
@@ -19,6 +20,7 @@ RUN set -eux; \
 		bzip2 \
 		ca-certificates \
 		gmp-dev \
+		jemalloc-dev \
 		libffi-dev \
 		procps \
 		yaml-dev \
@@ -33,14 +35,25 @@ RUN set -eux; \
 		ca-certificates \
 		libffi-dev \
 		libgmp-dev \
+		libjemalloc-dev \
 		libssl-dev \
 		libyaml-dev \
 		procps \
 		zlib1g-dev \
 	; \
+	apt-mark hold libjemalloc-dev; \
 	rm -rf /var/lib/apt/lists/*
 
-{{ ) else "" end -}}
+{{ ) else ( -}}
+RUN set -eux; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends \
+		libjemalloc-dev \
+	; \
+	apt-mark hold libjemalloc-dev; \
+	rm -rf /var/lib/apt/lists/*
+
+{{ ) end -}}
 # skip installing gem documentation
 RUN set -eux; \
 	mkdir -p /usr/local/etc; \
@@ -234,6 +247,7 @@ RUN set -eux; \
 		--build="$gnuArch" \
 		--disable-install-doc \
 		--enable-shared \
+		--with-jemalloc \
 {{ if .rust.version then ( -}}
 		${rustArch:+--enable-yjit} \
 {{ ) else "" end -}}
@@ -285,7 +299,8 @@ RUN set -eux; \
 # rough smoke test
 	ruby --version; \
 	gem --version; \
-	bundle --version
+	bundle --version; \
+	ruby -r rbconfig -e "RbConfig::CONFIG['MAINLIBS'].include?('jemalloc') ? puts('Ruby is compiled with jemalloc') : warn('JEMALLOC IS MISSING FROM RUBY')"
 
 # don't create ".bundle" in all our apps
 ENV GEM_HOME /usr/local/bundle
