[BOPS-2278] Regenerates Dockerfiles with jemalloc
This applies the results of running `./versions.sh` followed by
`.apply-templates.sh` to regenerate the Dockerfiles based on the updated
`Dockerfile.template` which now includes `jemalloc`.

This is effectively what the GitHub action will run on a regular basis.

--- a/3.1/slim-bookworm/Dockerfile
+++ b/3.1/slim-bookworm/Dockerfile
@@ -5,6 +5,7 @@
 #
 
 FROM debian:bookworm-slim
+LABEL maintainer="Chris Hulton <chulton@ltvco.com>, Patrick Tulskie <patrick@ltvco.com>"
 
 RUN set -eux; \
 	apt-get update; \
@@ -13,11 +14,13 @@ RUN set -eux; \
 		ca-certificates \
 		libffi-dev \
 		libgmp-dev \
+		libjemalloc-dev \
 		libssl-dev \
 		libyaml-dev \
 		procps \
 		zlib1g-dev \
 	; \
+	apt-mark hold libjemalloc-dev; \
 	rm -rf /var/lib/apt/lists/*
 
 # skip installing gem documentation
@@ -86,6 +89,7 @@ RUN set -eux; \
 		--build="$gnuArch" \
 		--disable-install-doc \
 		--enable-shared \
+		--with-jemalloc \
 	; \
 	make -j "$(nproc)"; \
 	make install; \
@@ -110,7 +114,8 @@ RUN set -eux; \
 # rough smoke test
 	ruby --version; \
 	gem --version; \
-	bundle --version
+	bundle --version; \
+	ruby -r rbconfig -e "RbConfig::CONFIG['MAINLIBS'].include?('jemalloc') ? puts('Ruby is compiled with jemalloc') : warn('JEMALLOC IS MISSING FROM RUBY')"
 
 # don't create ".bundle" in all our apps
 ENV GEM_HOME /usr/local/bundle
