[BOPS-2278] Re-add maintainers to Dockerfile
This was accidentally dropped when merging in canonical changes to the
Dockerfile template.

--- a/3.1/alpine3.20/Dockerfile
+++ b/3.1/alpine3.20/Dockerfile
@@ -5,6 +5,7 @@
 #
 
 FROM alpine:3.20
+LABEL maintainer="Chris Hulton <chulton@ltvco.com>, Patrick Tulskie <patrick@ltvco.com>"
 
 # skip installing gem documentation with `gem install`/`gem update`
 RUN set -eux; \
