[BOPS-2306] Disable fail-fast for build_test_push jobs
We do not want a failure in one version build to cancel all of the other
in progress builds, especially given how long each takes.

--- a/.github/workflows/build-test-push-images.yml
+++ b/.github/workflows/build-test-push-images.yml
@@ -47,6 +47,7 @@ jobs:
       contents: read
       packages: write
     strategy:
+      fail-fast: false # Do not cancel every build if one fails
       matrix:
         include: ${{ fromJson(needs.define_matrix.outputs.matrix) }}
     env:
