Run build_test_push on ubuntu-22.04
The builds are core-dumping with ubuntu-24.04 (20250126.1.0)

--- a/.github/workflows/build-test-push-images.yml
+++ b/.github/workflows/build-test-push-images.yml
@@ -42,7 +42,7 @@ jobs:
   build_test_push:
     name: "Ruby ${{ matrix.patch_version}} (${{ matrix.variant }}): Build, Test, Push"
     needs: define_matrix
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04 # Avoids core dump issue introduced in ubuntu-24.04 (20250126.1.0)
     permissions:
       contents: read
       packages: write
