[BOPS-2723] Regenerates Dockerfiles with jemalloc
This applies the results of running `./versions.sh` followed by
`./apply-templates.sh` to regenerate the Dockerfiles based on the
updated `Dockerfile.template` which now includes `jemalloc`.

This is effectively what the GitHub action will run on a regular basis.

--- a/3.2/alpine3.21/Dockerfile
+++ b/3.2/alpine3.21/Dockerfile
@@ -5,6 +5,7 @@
 #
 
 FROM alpine:3.21
+LABEL maintainer="Chris Hulton <chulton@ltvco.com>, Patrick Tulskie <patrick@ltvco.com>"
 
 # skip installing gem documentation with `gem install`/`gem update`
 RUN set -eux; \
@@ -22,6 +23,7 @@ ENV RUBY_DOWNLOAD_SHA256 cf6699d0084c588e7944d92e1a8edda28b1cc3ee471a1f0aebb4b3d
 #   we purge system ruby later to make sure our final image uses what we just built
 RUN set -eux; \
 	\
+	apk add --no-cache jemalloc-dev; \
 	apk add --no-cache --virtual .ruby-builddeps \
 		autoconf \
 		bison \
@@ -101,6 +103,7 @@ RUN set -eux; \
 		--build="$gnuArch" \
 		--disable-install-doc \
 		--enable-shared \
+		--with-jemalloc \
 		${rustArch:+--enable-yjit} \
 	; \
 	make -j "$(nproc)"; \
@@ -130,7 +133,8 @@ RUN set -eux; \
 # rough smoke test
 	ruby --version; \
 	gem --version; \
-	bundle --version
+	bundle --version; \
+	ruby -r rbconfig -e "RbConfig::CONFIG['MAINLIBS'].include?('jemalloc') ? puts('Ruby is compiled with jemalloc') : warn('JEMALLOC IS MISSING FROM RUBY')"
 
 # don't create ".bundle" in all our apps
 ENV GEM_HOME /usr/local/bundle
