--- a/3.3/alpine3.21/Dockerfile
+++ b/3.3/alpine3.21/Dockerfile
@@ -5,6 +5,7 @@
 #
 
 FROM alpine:3.21
+LABEL maintainer="Chris Hulton <chulton@ltvco.com>, Patrick Tulskie <patrick@ltvco.com>"
 
 # skip installing gem documentation with `gem install`/`gem update`
 RUN set -eux; \
@@ -22,6 +23,7 @@ ENV RUBY_DOWNLOAD_SHA256 2b24a2180a2f7f63c099851a1d01e6928cf56d515d136a91bd20754
 #   we purge system ruby later to make sure our final image uses what we just built
 RUN set -eux; \
 	\
+	apk add --no-cache jemalloc-dev; \
 	apk add --no-cache --virtual .ruby-builddeps \
 		autoconf \
 		bzip2 \
@@ -99,6 +101,7 @@ RUN set -eux; \
 		--build="$gnuArch" \
 		--disable-install-doc \
 		--enable-shared \
+		--with-jemalloc \
 		${rustArch:+--enable-yjit} \
 	; \
 	make -j "$(nproc)"; \
@@ -128,7 +131,8 @@ RUN set -eux; \
 # rough smoke test
 	ruby --version; \
 	gem --version; \
-	bundle --version
+	bundle --version; \
+	ruby -r rbconfig -e "RbConfig::CONFIG['MAINLIBS'].include?('jemalloc') ? puts('Ruby is compiled with jemalloc') : warn('JEMALLOC IS MISSING FROM RUBY')"
 
 # don't create ".bundle" in all our apps
 ENV GEM_HOME /usr/local/bundle
