--- a/3.5-rc/slim-bookworm/Dockerfile
+++ b/3.5-rc/slim-bookworm/Dockerfile
@@ -5,6 +5,7 @@
 #
 
 FROM debian:bookworm-slim
+LABEL maintainer="Chris Hulton <chulton@ltvco.com>, Patrick Tulskie <patrick@ltvco.com>"
 
 RUN set -eux; \
 	apt-get update; \
@@ -34,6 +35,7 @@ RUN set -eux; \
 	apt-get install -y --no-install-recommends \
 		dpkg-dev \
 		libgdbm-dev \
+		libjemalloc-dev \
 		ruby \
 		autoconf \
 		bzip2 \
@@ -54,6 +56,7 @@ RUN set -eux; \
 		xz-utils \
 		zlib1g-dev \
 	; \
+	apt-mark hold libjemalloc-dev; \
 	\
 	rustArch=; \
 	dpkgArch="$(dpkg --print-architecture)"; \
@@ -92,6 +95,7 @@ RUN set -eux; \
 		--build="$gnuArch" \
 		--disable-install-doc \
 		--enable-shared \
+		--with-jemalloc \
 		${rustArch:+--enable-yjit} \
 	; \
 	make -j "$(nproc)"; \
@@ -120,7 +124,8 @@ RUN set -eux; \
 # rough smoke test
 	ruby --version; \
 	gem --version; \
-	bundle --version
+	bundle --version; \
+	ruby -r rbconfig -e "RbConfig::CONFIG['MAINLIBS'].include?('jemalloc') ? puts('Ruby is compiled with jemalloc') : warn('JEMALLOC IS MISSING FROM RUBY')"
 
 # don't create ".bundle" in all our apps
 ENV GEM_HOME /usr/local/bundle
