[BOPS-2723] Updates supported variants in CI builds
This adds trixie and alpine3.22 to `build-test-push-images.yml` to align
with the non-EOL variants supported in the default `ruby` image.

--- a/.github/workflows/build-test-push-images.yml
+++ b/.github/workflows/build-test-push-images.yml
@@ -19,8 +19,8 @@ jobs:
         id: generate-matrix
         run: |
           matrix=$(jq -c '
-            # Define supported variants
-            ["bookworm", "slim-bookworm", "alpine3.21"] as $supported_variants |
+            # Define supported variants (non-EOL only)
+            ["trixie", "slim-trixie", "bookworm", "slim-bookworm", "alpine3.22", "alpine3.21"] as $supported_variants |
             # Convert `versions.json` object to an array of key-value pairs
             to_entries[] |
             # Exclude preview Ruby versions (Ex: `3.x-rc`)
